--- a/log-beta.html
+++ b/log-beta.html
@@ -73,7 +73,7 @@
 
     document.getElementById("fl").addEventListener("change", () => {
         if (document.getElementById("fl").files.length > 0) {
-            importFile());
+            importFile();
         }
     });
 
