--- a/log-beta.html
+++ b/log-beta.html
@@ -48,6 +48,8 @@
     let command = "";
     let editMode = false;
     let textMode = false;
+    let startTime = null;
+    
     const hiddenTag = "hidden";
     const noteTag = "note";
     const linkTag = "link";
@@ -196,12 +198,29 @@
                 doText(content);
                 break;
             }
+            case "timer": {
+                doTimer(content);
+                break;
+            }
             default: {
                 showStatus(`${action} - failed`);
             }
         }
 
         command = text;
+    }
+
+    doTimer = (content) => {
+        if (!content) {
+            if (!!startTime) {
+                showMessage(formatMilliSeconds(new Date()-startTime);
+                showStatus("stopped", true);
+                startTime = null;
+            } else {
+                startTime = new Date();
+                showStatus("started", true);
+            }
+        }
     }
 
     doAdd = (text) => {
@@ -696,6 +715,10 @@
     isoToString = (date) => {
         date = new Date(date);
         return `${date.getMonth() + 1}/${date.getDate()}/${date.getFullYear()}`;
+    }
+
+    formatMilliSeconds = (ms) => {
+        return `${Math.floor(ms/(60*60*1000)).toString().padStart(2,"0")}:${Math.floor(ms%(60*60*1000)/60).toString().padStart(2,"0")}:${Math.floor(ms%60).toString().padStart(2,"0")};
     }
 
     extractDate = (text) => {
