--- a/log-beta.html
+++ b/log-beta.html
@@ -213,7 +213,7 @@
     doTimer = (content) => {
         if (!content) {
             if (!!startTime) {
-                showMessage(formatMilliSeconds(new Date()-startTime);
+                showMessage(formatMilliSeconds(new Date()-startTime));
                 showStatus("stopped", true);
                 startTime = null;
             } else {
