--- a/log-beta.html
+++ b/log-beta.html
@@ -718,7 +718,7 @@
     }
 
     formatMilliSeconds = (ms) => {
-        return `${Math.floor(ms/(60*60*1000)).toString().padStart(2,"0")}:${Math.floor(ms%(60*60*1000)/60).toString().padStart(2,"0")}:${Math.floor(ms%60).toString().padStart(2,"0")};
+        return `${Math.floor(ms/(60*60*1000)).toString().padStart(2,"0")}:${Math.floor(ms%(60*60*1000)/60).toString().padStart(2,"0")}:${Math.floor(ms%60).toString().padStart(2,"0")}`;
     }
 
     extractDate = (text) => {
