--- a/log-beta.html
+++ b/log-beta.html
@@ -198,7 +198,7 @@
                 doText(content);
                 break;
             }
-            case "timer": {
+            case ".timer": {
                 doTimer(content);
                 break;
             }
