--- a/log-beta.html
+++ b/log-beta.html
@@ -218,6 +218,25 @@
 
     doCalendar = (content) => {
         let today = new Date();
+        let title = date.toLocaleString('default',{month:'long', year:'numeric'});
+        let columns = "MON TUE WED THU FRI SAT SUN";
+        let line = "---------------------------";
+        let day = today.getDay();
+        let start = new Date(today.getFullYear(), today.getMonth(), 1);
+        let end = new Date(today.getFullYear(), today.getMonth() + 1, 0);
+
+        let lines = "";
+        for (let d = start; d <= end; d.setDate(d.getDate() + 1)) {
+            for (let wd = 0; wd <= 6; wd++) {
+                let cell = d.getDay() == wd ? d.getDate() : "";
+                lines = `${line}${cell.padEnd(" ", 3).padStart(" ", 3)}{\n}`;
+            }
+
+            lines = `${line}{\n}`;
+        }
+
+        showData(`${title}\n${columns}\n${columns}\n{lines}`);
+        showStatus("done", true);
     }
 
     doTimer = (content) => {
