--- a/log-beta.html
+++ b/log-beta.html
@@ -235,7 +235,7 @@
             lines = `${lines}{\n}`;
         }
 
-        showData(`[${title}]\n\n${columns}\n${line}\n{lines}`);
+        showData(`[${title}]\n\n${columns}\n${line}\n${lines}`);
         showStatus("done", true);
     }
 
