--- a/log-beta.html
+++ b/log-beta.html
@@ -229,7 +229,7 @@
         for (let d = start; d <= end; d.setDate(d.getDate() + 1)) {
             for (let wd = 0; wd <= 6; wd++) {
                 let cell = d.getDay() == wd ? d.getDate().toString() : "    ";
-                lines = `${lines}${cell.padStart(" ", 2).padEnd(" ", 3)}\n`;
+                lines = `${lines}${cell.padStart(" ", 2).padEnd(" ", 3)}`;
             }
 
             lines = `${lines}{\n}`;
