--- a/log-beta.html
+++ b/log-beta.html
@@ -232,7 +232,7 @@
                 lines = `${lines}${cell.padStart(" ", 2).padEnd(" ", 3)}`;
             }
 
-            lines = `${lines}{\n}`;
+            lines = `${lines}\n`;
         }
 
         showData(`[${title}]\n\n${columns}\n${line}\n${lines}`);
