--- a/log-beta.html
+++ b/log-beta.html
@@ -231,7 +231,7 @@
         }
         
         for (let d = start; d <= end; d.setDate(d.getDate() + 1)) {
-            lines = `${lines}${d.getDate().toString().padStart(" ", 3).padEnd(" ", 4)}${d.getDay() == 6 ? "\n" : ""}`;
+            lines = `${lines}${d.getDate().toString().padStart(3, " ").padEnd(4, " ")}${d.getDay() == 6 ? "\n" : ""}`;
         }
 
         showData(`[${title}]\n\n${columns}\n${line}\n${lines}`);
