--- a/log-beta.html
+++ b/log-beta.html
@@ -227,11 +227,11 @@
 
         let lines = "";
         for (let wd = 0; wd < start.getDay(); wd++) {
-            lines = `${lines}    `;
+            lines = `${lines}\xA0\xA0\xA0\xA0`;
         }
         
         for (let d = start; d <= end; d.setDate(d.getDate() + 1)) {
-            lines = `${lines}${d.getDate().toString().padStart(3, " ").padEnd(4, " ")}${d.getDay() == 6 ? "\n" : ""}`;
+            lines = `${lines}${d.getDate().toString().padStart(3, "\xA0").padEnd(4, "\xA0")}${d.getDay() == 6 ? "\n" : ""}`;
         }
 
         showData(`[${title}]\n\n${columns}\n${line}\n${lines}`);
