--- a/log-beta.html
+++ b/log-beta.html
@@ -220,7 +220,6 @@
         let date = new Date();
         let title = date.toLocaleString('default',{month:'long', year:'numeric'});
         let columns = "SUN MON TUE WED THU FRI SAT";
-        let line = "---------------------------";
         let day = date.getDay();
         let start = new Date(date.getFullYear(), date.getMonth(), 1);
         let end = new Date(date.getFullYear(), date.getMonth() + 1, 0);
@@ -231,10 +230,10 @@
         }
         
         for (let d = start; d <= end; d.setDate(d.getDate() + 1)) {
-            lines = `${lines}${d.getDate().toString().padStart(3, "\xA0").padEnd(4, "\xA0")}${d.getDay() == 6 ? "\n" : ""}`;
+            lines = `${lines}${d.getDate().toString().padStart(3, "\xA0").padEnd(4, "\xA0")}${d.getDay() == 6 ? "\n\n" : ""}`;
         }
 
-        showData(`[${title}]\n\n${columns}\n${line}\n${lines}`);
+        showData(`[${title}]\n\n${columns}\n\n${lines}`);
         showStatus("done", true);
     }
 
