--- a/log-beta.html
+++ b/log-beta.html
@@ -217,23 +217,8 @@
     }
 
     doCalendar = (content) => {
-        let date = new Date();
-        let title = date.toLocaleString('default',{month:'long', year:'numeric'});
-        let columns = "mon tue wed thu fri sat sun";
-        let day = date.getDay();
-        let start = new Date(date.getFullYear(), date.getMonth(), 1);
-        let end = new Date(date.getFullYear(), date.getMonth() + 1, 0);
-
-        let lines = "";
-        for (let wd = 1; wd < start.getDay(); wd++) {
-            lines = `${lines}\xA0\xA0\xA0\xA0`;
-        }
-        
-        for (let d = start; d <= end; d.setDate(d.getDate() + 1)) {
-            lines = `${lines}${d.getDate().toString().padStart(3, "\xA0").padEnd(4, "\xA0")}${d.getDay() == 0 ? "\n\n" : ""}`;
-        }
-
-        showData(`[${title}]\n\n${columns}\n\n${lines}`);
+        let calendar = getCalendar(content);
+        showData(calendar);
         showStatus("done", true);
     }
 
@@ -748,6 +733,25 @@
     formatMilliSeconds = (ms) => {
         let s = ms/1000;
         return `${Math.floor(s/3600).toString().padStart(2,"0")}:${Math.floor(s%3600/60).toString().padStart(2,"0")}:${Math.floor(s%60).toString().padStart(2,"0")}`;
+    }
+
+    getCalendar = (date) => {
+        let title = date.toLocaleString('default',{month:'long', year:'numeric'});
+        let columns = "mon tue wed thu fri sat sun";
+        let day = date.getDay();
+        let start = new Date(date.getFullYear(), date.getMonth(), 1);
+        let end = new Date(date.getFullYear(), date.getMonth() + 1, 0);
+
+        let lines = "";
+        for (let wd = 1; wd < start.getDay(); wd++) {
+            lines = `${lines}\xA0\xA0\xA0\xA0`;
+        }
+        
+        for (let d = start; d <= end; d.setDate(d.getDate() + 1)) {
+            lines = `${lines}${d.getDate().toString().padStart(3, "\xA0").padEnd(4, "\xA0")}${d.getDay() == 0 ? "\n\n" : ""}`;
+        }
+
+        return `[${title}]\n\n${columns}\n\n${lines}`;
     }
 
     extractDate = (text) => {
