--- a/log-beta.html
+++ b/log-beta.html
@@ -742,11 +742,7 @@
         let start = new Date(date.getFullYear(), date.getMonth(), 1);
         let end = new Date(date.getFullYear(), date.getMonth() + 1, 0);
 
-        let lines = "";
-        for (let wd = 1; wd < start.getDay(); wd++) {
-            lines = `${lines}\xA0\xA0\xA0\xA0`;
-        }
-        
+        let lines = "\xA0\xA0\xA0\xA0".repeat(start.getDay() == 0 ? 6 : start.getDay()-1);
         for (let d = start; d <= end; d.setDate(d.getDate() + 1)) {
             lines = `${lines}${d.getDate().toString().padStart(3, "\xA0").padEnd(4, "\xA0")}${d.getDay() == 0 ? "\n\n" : ""}`;
         }
