--- a/log-beta.html
+++ b/log-beta.html
@@ -217,7 +217,13 @@
     }
 
     doCalendar = (content) => {
-        let calendar = getCalendar(new Date(content));
+        let calendar = "";
+        if (content.length <= 2) { 
+            calendar = getCalendar(new Date());
+        } else if (content.length == 4) {
+            [0,1,2,3,4,5,6,7,8.9,10,11].forEach(m => calendar = `${calendar}\n\n${getCalendar(new Date(parseInt(content), m, 1))}`);
+        }
+        
         showData(calendar);
         showStatus("done", true);
     }
