--- a/log-beta.html
+++ b/log-beta.html
@@ -219,9 +219,9 @@
     doCalendar = (content) => {
         let calendar = "";
         if (content.length <= 2) { 
-            calendar = getCalendar(new Date());
+            calendar = getCalendar(new Date(content));
         } else if (content.length == 4) {
-            [0,1,2,3,4,5,6,7,8.9,10,11].forEach(m => calendar = `${calendar}\n\n${getCalendar(new Date(parseInt(content), m, 1))}`);
+            [0,1,2,3,4,5,6,7,8.9,10,11].forEach(m => calendar = `${calendar}${getCalendar(new Date(parseInt(content), m, 1))}\n\n\n`);
         }
         
         showData(calendar);
