--- a/log-beta.html
+++ b/log-beta.html
@@ -217,11 +217,15 @@
     }
 
     doCalendar = (content) => {
+        let date = new Date();
         let calendar = "";
-        if (content.length <= 2) { 
-            calendar = getCalendar(new Date(content));
+        if (content.length == 1 || content.length == 2) { 
+            date.setMonth(parseInt(content));
+            calendar = getCalendar(new Date(new Date));
         } else if (content.length == 4) {
             [0,1,2,3,4,5,6,7,8.9,10,11].forEach(m => calendar = `${calendar}${getCalendar(new Date(parseInt(content), m, 1))}\n\n\n`);
+        } else {
+            calendar = getCalendar(new Date());
         }
         
         showData(calendar);
