--- a/log-beta.html
+++ b/log-beta.html
@@ -224,14 +224,14 @@
     doToday = () => {
         doTask("recent:30d");        
         let month = new Date().getMonth() + 1;
-        doCalendar(`${month}&${month++}`, true);
+        doCalendar(`${month}&${month + 1}`, true);
     }
 
     doCalendar = (content, append = false) => {
         let date = new Date();
         let calendar = "";
         if (content.indexOf("&" > 0)) {
-            content.split("&").forEach(m => calendar = `${calendar}${getCalendar(new Date(parseInt(content), m, 1))}\n\n\n`);
+            content.split("&").forEach(m => calendar = `${calendar}${getCalendar(new Date(date.getFullYear(), m, 1))}\n\n\n`);
         } else if (content.length == 1 || content.length == 2) { 
             date.setMonth(parseInt(content)-1);
             calendar = getCalendar(date);
