--- a/log-beta.html
+++ b/log-beta.html
@@ -231,7 +231,7 @@
         let date = new Date();
         let calendar = "";
         if (content.indexOf("&" > 0)) {
-            content.split("&").forEach(m => calendar = `${calendar}${getCalendar(new Date(date.getFullYear(), m, 1))}\n\n\n`);
+            content.split("&").forEach(m => calendar = `${calendar}${getCalendar(new Date(date.getFullYear(), m-1, 1))}\n\n\n`);
         } else if (content.length == 1 || content.length == 2) { 
             date.setMonth(parseInt(content)-1);
             calendar = getCalendar(date);
