--- a/log-beta.html
+++ b/log-beta.html
@@ -250,7 +250,7 @@
     }
 
     doTimer = (content) => {
-        showLists(filterData(`tag:${timerTag}+${content}`));
+        showTimers(filterData(`tag:${timerTag}+${content}`));
         return;
         
         if (!content) {
