--- a/log-beta.html
+++ b/log-beta.html
@@ -773,7 +773,7 @@
         });
         
         showData(message);
-        showStatus(count, true);
+        showStatus(subList.length, true);
     }
 
     saveAsFile = (data, fileName) => {
