--- a/log-beta.html
+++ b/log-beta.html
@@ -354,7 +354,7 @@
         if (!content && !lastAdd) {
             showStatus("failed", true);
             return;
-        } else if (!content)
+        } else if (!content) {
             content = `text:${lastAdd}`;
         }
 
