--- a/log-beta.html
+++ b/log-beta.html
@@ -216,7 +216,7 @@
             }
             case ".calculate": {
                 showStatus(action);
-                doCalculate();
+                doCalculate(action);
                 break;
             }
             default: {
@@ -227,8 +227,8 @@
         command = text;
     }
 
-    doCalculate(content) => {
-        if (!content || content.match(/!start/g)) {
+    doCalculate = (content) => {
+        if (!content || content.match(/[0-9-+*/%^()]+/g)) {
             showStatus("failed", true);
             return;
         }
