--- a/log-beta.html
+++ b/log-beta.html
@@ -253,7 +253,7 @@
         let noOfPackets = (normalCount*noOfFour) + (2*noOfTwo);
         let greenTotal = greenPrice*noOfPackets;
         
-        let total = (greenPrice*normalCount*noOfDays) - (greenPrice*noOfTwo*2) - ((greenPrice-bluePrice)*noOfBlue) - (greenPrice*normalCount*noofNo) + sc;
+        let total = (greenPrice*normalCount*noOfDays) - (greenPrice*noOfTwo*2) - ((greenPrice-bluePrice)*noOfBlue) - (greenPrice*normalCount*noOfNo) + sc;
 
         let template = "F2 Sriram flats";
         template += `\nMonth Year`;
