--- a/log-beta.html
+++ b/log-beta.html
@@ -262,9 +262,9 @@
         template = (noOfTwo == 0) ? template : `${template}\n${noOfTwo} X 2 = ${noOfTwo*2} packets`;
         template = `${template}\n${noOfFour} X 4 = ${noOfFour*4} packets`;
         template = `${template}\n${noOfPackets} X ${greenPrice} = ${greenTotal}`;
-        template += (noOfBlue == 0) ? template :`\n${noOfBlue} blue packets = -${(greenPrice-bluePrice)*noOfBlue}`;
-        template += `\nSC ${sc}`;
-        template += `\nTotal: ${total}`;;
+        template = (noOfBlue == 0) ? template :`${template}\n${noOfBlue} blue packets = -${(greenPrice-bluePrice)*noOfBlue}`;
+        template = `${template}\nSC ${sc}`;
+        template = `${template}\nTotal: ${total}`;
         
         showData(`${content}\n${template}`);
         showStatus("done", true);
