--- a/log-beta.html
+++ b/log-beta.html
@@ -266,7 +266,7 @@
         template = `${template}\nSC ${sc}`;
         template = `${template}\nTotal: ${total}`;
         
-        showData(`${content}\n${template}`);
+        showData(`[${content}]\n\n${template}`);
         showStatus("done", true);
     }
 
@@ -277,7 +277,7 @@
         }
 
         let fn = new Function(`return (${content})`);
-        showData(`${content}\n${fn()}`);
+        showData(`[${content}]\n\n${fn()}`);
         showStatus("done", true);
     }
 
